service-coffeeapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffeeapi-svc
spec:
  selector:
    app: coffeeapi
  type: NodePort
  ports:
  - port: 8001 
    targetPort: 8080 
    protocol: TCP
