service-teaapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: teaapi-svc
spec:
  selector:
    app: teaapi
  type: NodePort
  ports:
  - port: 8001 
    targetPort: 80
    protocol: TCP
